# nazwa-robocza

./: README.md
infra/: docker-compose.yaml  run_monero.bash
infra/keycloak/: realm.json
payment-module/: .env  Cargo.toml  build.rs
payment-module/src/: main.rs
payment-module/src/grpc/: transaction_service.rs
payment-module/src/monero/: mod.rs  rpc_client.rs
proto/: transaction_service.proto
transaction-system/: pom.xml
transaction-system/src/main/java/pl/bartus/jakub/master/thesis/transactionsystem/: TransactionSystemApplication.java
transaction-system/src/main/java/pl/bartus/jakub/master/thesis/transactionsystem/api/: TransactionApi.java
transaction-system/src/main/java/pl/bartus/jakub/master/thesis/transactionsystem/api/dto/: PaymentAddressDTO.java  TransactionDTO.java
transaction-system/src/main/java/pl/bartus/jakub/master/thesis/transactionsystem/api/facade/: TransactionFacade.java
transaction-system/src/main/java/pl/bartus/jakub/master/thesis/transactionsystem/api/mapper/: TransactionMapper.java
transaction-system/src/main/java/pl/bartus/jakub/master/thesis/transactionsystem/controller/: TransactionController.java
transaction-system/src/main/java/pl/bartus/jakub/master/thesis/transactionsystem/domain/transaction/controller/: TransactionController.java
transaction-system/src/main/java/pl/bartus/jakub/master/thesis/transactionsystem/security/: SecuredByGroup.java  SecuredByGroupAspect.java  SecurityConfig.java
transaction-system/src/main/resources/: application.properties
(+10 files in other folders)
