[package]
name = "payment-module"
version = "0.1.0"
edition = "2021"

[dependencies]
monero = "0.21.0"
monero-rpc = { version = "0.4.0", features = ["rpc_authentication",] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.98"
dotenv = "0.15.0"